# ml_team_project_hse

./: .dvcignore  .env_example  .gitignore  .pre-commit-config.yaml  README.md  app.py  artifacts.dvc  data.dvc  docker-compose.yml  get_data.sh  pyproject.toml  setup.cfg  tasks_and_hyposesis.md  trained_models.dvc
.dvc/: config
bot/: Dockerfile  app.py  config.py
bot/constraints/: genres.py  sample_img.py  user_data.py
bot/handlers/: recommend.py  recommendations.py  user_info.py
bot/keyboards/: data.py  general.py  movies.py
bot/tests/: test_app.py  test_reccomend.py  test_recommend.py  test_user_info.py
bot/utils/: __init__.py  db.py  recsys_api.py
data/: data_description.md
db/: Dockerfile  create_db.sql  init-script.py
db/configs/: cfg.yaml
notebooks/: DL_sentiement.ipynb  DL_sentiment.ipynb  LightFM.ipynb  Model_usr_to_user.ipynb  artefacts_user_to_user.py  pipeline_user_to_user.py  popularity_baseline.ipynb  project_model_item_to_item.ipynb  search_movies_model.ipynb  user_to_user_learn.py
notebooks/EDA/: EDA_IUGAI.ipynb  bulgakov_EDA.ipynb  final_project_eda.ipynb  koshelev_EDA.ipynb
notebooks/EDA/.ipynb_checkpoints/: final_project_eda-checkpoint.ipynb
notebooks/EDA/personal_notebooks/: EDA_IUGAI.ipynb  bulgakov_EDA.ipynb  koshelev_EDA.ipynb
notebooks/dataset_inputs/: RecSys notebook EDA.ipynb
proto/: service.proto
recsys/: Dockerfile  app.py  config.py  infer.py  train.py
recsys/models/: popularity_model.py
recsys/models/item_to_item/: __init__.py  data_pipeline.py  infer.py  item_to_item_models.py  metrics.py  train.py
recsys/models/personal/: lightfm_infer.py  popularity_infer.py  popularity_model.py  predict.py
recsys/models/user_to_user/: __init__.py  func.py  infer.py  utils.py
recsys/trained_models/: popularity_based.pkl
recsys/utils/: helpers.py  metrics.py  unpickle.py
