[tool.poetry]
name = "ml-team-project-hse"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
implicit = "^0.7.2"
more-itertools = "^10.1.0"
seaborn = "^0.13.0"
aiogram = "^3.2.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
pre-commit = "^3.6.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 120

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"
